        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.11-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : major
Bugzilla   : 16750
Description: service mount cannot take device name with ":"
Details    : Only when device name contains ":/" will mount treat it as 
             client mount.

Severity   : major
Bugzilla   : 16561
Description: Hitting mdc_commit_close() ASSERTION
Details    : Properly handle request reference release in
             ll_release_openhandle().

Severity   : normal
Bugzilla   : 15927
Frequency  : rare
Description: replace ptlrpcd with the statahead thread to interpret the async
             statahead RPC callback

Severity   : normal
Bugzilla   : 16611
Frequency  : on recovery
Description: I/O failures after umount during fail back
Details    : if client reconnected to restarted server we need join to recovery
             instead of find server handler is changed and process self eviction
             with cancel all locks.

Severity   : enhancement
Bugzilla   : 16633
Description: Update to RHEL5 kernel-2.6.18-92.1.10.el5.

Severity   : enhancement
Bugzilla   : 16547
Description: Update to SLES10 SP2 kernel-2.6.16.60-0.27.

Severity   : enhancement
Bugzilla   : 16566
Description: Upcall on Lustre log has been dumped
Details    : Allow for a user mode script to be called once a Lustre log has
             been dumped. It passes the filename of the dumped log to the
	     script, the location of the script can be specified via
	     /proc/sys/lnet/debug_log_upcall.

Severity   : minor
Bugzilla   : 16583
Frequency  : rare
Description: avoid messages about idr_remove called for id  which is not allocated.