@@ -12,10 +12,14 @@ tbd  Sun Microsystems, Inc.
        * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
         removed cwd "./" (refer to Bugzilla 14399).
 
+Severity   : normal
+Bugzilla   : 16907
+Description: Prevent import from entering FULL state when server in recovery
+
 Severity   : major
 Bugzilla   : 16750
 Description: service mount cannot take device name with ":"
-Details    : Only when device name contains ":/" will mount treat it as 
+Details    : Only when device name contains ":/" will mount treat it as
              client mount.
 
 Severity   : major
